welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:19: error: type mismatch;
 found   : Unit
 required: Int
  return setPos(x,y)
               ^